# INE5670

./: .gitignore  README.md  package-lock.json
atividade-1/: app.json  package-lock.json  package.json
atividade-1/app/: _layout.tsx  modal.tsx  parkInfo.tsx
atividade-1/app/(tabs)/: _layout.tsx  index.tsx  two.tsx
atividade-1/assets/parks/: Park.ts  data.json
atividade-1/components/: ParkThumb.tsx
atividade-1/constants/: Colors.ts
atividade-2/esp/main/: main.ino
atividade-2/servidor/: Cargo.toml
atividade-2/servidor/public/: data.json  log.json
atividade-2/servidor/src/: main.rs
atividade-3/: package-lock.json  package.json
atividade-3/api/: main.js
atividade-3/cadastro-patinete/: main.js  package-lock.json  package.json
atividade-3/cadastro-patinete/dados/: dados.db
atividade-3/cadastro-usuario/: main.js  package-lock.json  package.json
atividade-3/controle-aluguel/: main.js  package.json
atividade-3/controle-patinete/: main.js
atividade-3/controle-patinetes/: package.json
atividade-3/pagamento/: main.js  package.json
atividade-3/pagamento/dados/: dados.db
projeto/app/: package-lock.json  package.json
projeto/app/app/: endpoints.tsx  register.tsx
projeto/app/app/(tabs)/: _layout.tsx  index.tsx  two.tsx
projeto/app/components/: LogEntry.tsx  UserInfo.tsx
projeto/app/constants/: Log.ts  User.ts
projeto/app/utils/: index.tsx
projeto/device/main/: main.ino
projeto/server/: main.js  package-lock.json  package.json
projeto/server/cadastro/: main.js
projeto/server/cadastro/dados/: keys.json
projeto/server/log/: main.js
(+1 files in other folders)
