[package]
name = "servidor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hyper = { version = "0.14.27", features = ["full"] }
httprouter = "0.5.0"
tokio = { version = "1", features=["full"] }
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
chrono = "0.4.31"